--- a/myPage.html
+++ b/myPage.html
@@ -15,9 +15,9 @@
         <div id="logo"><a href="#"></a></div>
         <div>
             <ul id="myTab" class="nav nav-tabs  navbar-static-top topnav">
-                <li ><a href="#firstPage" data-toggle="tab">首页</a></li>
+                <li class="active"><a href="#firstPage" data-toggle="tab">首页</a></li>
                 <li><a href="#aboutme" data-toggle="tab">关于我</a></li>
-                <li class="active"><a href="#course" data-toggle="tab">一大碗鸡汤</a></li>
+                <li><a href="#course" data-toggle="tab">一大碗鸡汤</a></li>
                 <li ><a href="#messagePage" data-toggle="tab">留言板</a></li>
             </ul>
         </div>
@@ -25,7 +25,7 @@
     <hr class="hr"/>
     <!--</div>-->
     <div id="myTabContent" class="tab-content">
-        <div class="tab-pane fade" id="firstPage">
+        <div class="tab-pane fade in active" id="firstPage">
             <div class="firstPart">
                 <div class="photo">
                     <a href="#aboutme">
@@ -219,7 +219,7 @@
             </div>
             <!--<p>this is 2</p>-->
         </div>
-        <div class="tab-pane fade  in active" id="course">
+        <div class="tab-pane fade " id="course">
             <p>this is 3</p>
         </div>
         <div class="tab-pane fade" id="messagePage">
