--- a/myPage.html
+++ b/myPage.html
@@ -212,7 +212,16 @@
                             </div>
                         </div>
                         <div class="col-md-4 right-panel2">
-
+                            <div class="FC">
+                                <span class="windmill2">
+                                    <span class="pillar"></span>
+                                        <span class="axis">
+                                            <span class="swing"></span>
+                                            <span class="swing2"></span>
+                                            <span class="swing3"></span>
+                                        </span>
+                                    </span>
+                            </div>
                         </div>
                     </div>
                 </div>
